Fix overflow of tags for single long tags

--- a/src/main/resources/view/Theme.css
+++ b/src/main/resources/view/Theme.css
@@ -506,12 +506,14 @@
 }
 
 #tags .label {
+    -fx-wrap-text: true;
     -fx-text-fill: white;
     -fx-background-color: #3e7b91;
     -fx-padding: 1 3 1 3;
     -fx-border-radius: 2;
     -fx-background-radius: 2;
     -fx-font-size: 11;
+    -fx-max-width: 200;
 }
 
 #names {
@@ -540,4 +542,9 @@
     -fx-border-radius: 2;
     -fx-background-radius: 2;
     -fx-font-size: 11;
+}
+
+.scroll-pane {
+    -fx-background-color: transparent;
+    -fx-border-width: 0;
 }
